@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-11-22T08:25:46Z",
+  "timestamp" : "2022-11-23T01:25:03Z",
   "count_outdated" : 2611,
   "uniques_outdated" : 702,
-  "count" : 2645,
+  "count" : 2646,
   "uniques" : 720,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-11-22T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
