@@ -1,3 +1,11 @@
+2022-11-23T01:25:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3528452870 # 1053
+* notice: last 14d: unq all: 9 35
+* notice: prev accum: outdated-unq outdated-all / unq all: 702 2611 / 720 2645
+* notice: next accum: outdated-unq outdated-all / unq all: 702 2611 / 720 2646
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-11-22]
+
 2022-11-22T08:25:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3521608888 # 1051
 * notice: last 14d: unq all: 9 34
